# bedrock-agent

./: .gitattributes  .gitignore  README.md  pyproject.toml
samples/: 123.json
src/bedrock_agent/: run_frontdesk_agent.ipynb  run_marketing_agent.ipynb  run_order_support_agent.ipynb  run_product_support_agent.ipynb
src/bedrock_agent/crm/: frontdesk_agent.py  marketing_agent.py  models.py  non_collaborating_agent.py  orders_mcp.py  orders_support_agent.py  product_support_agent.py  run_bedrock.py  run_cleanup.py
src/bedrock_agent/crm/lambdas/: lambda_function_order_handler.py  payload-orders.json
src/bedrock_agent/utils/: inline_agent_utils.py  lambda_creator.py
